# tensorspine

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
.clae/commands/: assess.md
.claude/: settings.json
.claude/commands/: check.md  derive.md  gradcheck.md  progress.md  quiz.md
.github/workflows/: test.yml
experiments/: 01_single_neuron.py  02_moons.py  03_no_zero_grad.py  04_init_comparison.py  05_deep_chain.py  _common.py
notes/: README.md  derivations.md  shortcuts.md
tensorspine/: __init__.py  engine.py  nn.py  viz.py
tests/: test_accumulation.py  test_gradcheck.py  test_nn.py  test_ops.py  test_vs_pytorch.py
tools/: stub_report.py
