[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tensorspine"
version = "0.1.0"
description = "A scalar reverse-mode automatic differentiation engine, written from scratch to understand backpropagation."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Advik" }]
license = { text = "MIT" }

# The engine is stdlib-only (math, random). This empty list is deliberate and
# load-bearing: nothing here may be imported by tensorspine/engine.py or nn.py.
dependencies = []

[project.optional-dependencies]
# Tests, data generation, plotting, and tooling ONLY — never imported by the engine.
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "scikit-learn>=1.3",
    "torch>=2.0",
    "graphviz>=0.20",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
include = ["tensorspine*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "torch: marks tests that require PyTorch (skip cleanly if it is absent)",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
# E = pycodestyle, F = pyflakes, I = isort, UP = pyupgrade.
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
# Package __init__ re-exports; unused imports there are intentional.
"tensorspine/__init__.py" = ["F401"]
